gitops/platform/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-aks-iot-platform-frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: azure-aks-iot-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: azure-aks-iot-platform
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
